# shrtxt

./: README.md  docker-compose.yaml
.devcontainer/data-input-container/: devcontainer.json
.devcontainer/embedding-container/: devcontainer.json
.devcontainer/web-container/: devcontainer.json
data-input/: .env.example  Makefile  csv.go  db.go  file_network.go  go.mod  go.sum  utils.go
data-input/cmd/online/: main.go
data-input/cmd/online-sim/: main.go
data-input/cmd/test/: main.go
embedding/: .dockerignore  .env.example  Cargo.toml  Makefile
embedding/src/: db.rs  env.rs  main.rs  model.rs  utils.rs
web/: package-lock.json  package.json
web/prisma/: schema.prisma
web/src/: env.js
web/src/server/: auth.ts
